Add WinCE patches to snap-1999-05-30-wince-patches branch.

--- a/config.h.in
+++ b/config.h.in
@@ -3,8 +3,20 @@
 /* Do we know about the C type sigset_t? */
 #undef HAVE_SIGSET_T
 
+/* Do we have the `_stdcall' keyword? */
+#undef STDCALL
+
 /* Define if you have the <signal.h> header file.  */
 #undef HAVE_SIGNAL_H
 
-/* Define if you have the <windows.h> header file.  */
-#undef HAVE_WINDOWS_H
+/* Define if you don't have errno. (eg. WinCE) */
+#undef NEED_ERRNO
+
+/* Define if you don't have calloc. (eg. WinCE)  */
+#undef NEED_CALLOC
+
+/* Define if you don't have ftime. (eg. WinCE)  */
+#undef NEED_FTIME
+
+/* Define if you don't have semaphores. (eg. WinCE)  */
+#undef NEED_SEM
